--- a/app/src/main/res/layout/medication_list_item.xml
+++ b/app/src/main/res/layout/medication_list_item.xml
@@ -74,12 +74,13 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginEnd="16dp"
                 android:fontFamily="@font/poppins_bold"
                 android:text="Panadol"
                 android:textColor="@color/black"
                 android:textSize="18sp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline_medication"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/iv_medication" />
 
             <TextView
@@ -89,19 +90,28 @@
                 android:layout_marginStart="8dp"
                 android:fontFamily="@font/poppins_medium"
                 android:text="Capsule"
-                app:layout_constraintEnd_toStartOf="@+id/imageView3"
+                app:layout_constraintEnd_toEndOf="@+id/tv_medication_name_cv"
                 app:layout_constraintStart_toEndOf="@+id/iv_medication"
                 app:layout_constraintTop_toTopOf="@+id/guideline_medication" />
 
             <ImageView
                 android:id="@+id/imageView3"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:src="@drawable/notification_medication"
+                app:layout_constraintEnd_toStartOf="@+id/tv_medication_time_cv"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medication_type_cv" />
+
+            <TextView
+                android:id="@+id/tv_medication_time_cv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="4dp"
-                android:src="@drawable/notification_medication"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="08:00 AM"
+                app:layout_constraintBottom_toBottomOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toTopOf="@+id/imageView3" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 </androidx.constraintlayout.widget.ConstraintLayout>
