--- a/app/src/main/res/layout/dialog_sign_out.xml
+++ b/app/src/main/res/layout/dialog_sign_out.xml
@@ -97,11 +97,10 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="24dp"
             android:background="@drawable/custom_filled_rounded_button"
             android:text="Log Out"
             android:textSize="16sp"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_cancel_sign_out_dialog"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline_sign_out_dialog"
             app:layout_constraintTop_toBottomOf="@+id/tv_sign_out_dialog_body" />
