--- a/app/src/main/res/layout/todays_appointments_list_item.xml
+++ b/app/src/main/res/layout/todays_appointments_list_item.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/cv_today_appointments"
     android:layout_width="180dp"
-    android:layout_height="180dp"
+    android:layout_height="190dp"
     android:layout_margin="5dp"
     app:cardBackgroundColor="#D4F2FF"
     app:cardCornerRadius="8dp"
@@ -35,6 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:layout_marginBottom="8dp"
             android:fontFamily="@font/poppins_regular"
             android:text="10:00 am"
             android:textSize="14sp"
