--- a/shifaa_scanner/src/main/res/layout/activity_medication.xml
+++ b/shifaa_scanner/src/main/res/layout/activity_medication.xml
@@ -14,6 +14,38 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/view_background_scanned_medications"
         tools:listitem="@layout/prescription_list_item" />
+
+    <View
+        android:id="@+id/view_background_scanned_medications"
+        android:layout_width="wrap_content"
+        android:layout_height="160dp"
+        android:background="@color/main_color"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_scanned_medications_title_"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:fontFamily="@font/poppins_bold"
+        android:text="Scanned Medications"
+        android:textColor="@color/white"
+        android:textSize="24sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_scanned_medications_title_"
+        app:layout_constraintStart_toStartOf="@+id/tv_scanned_medications_title_"
+        app:layout_constraintTop_toBottomOf="@+id/tv_scanned_medications_title_"
+        app:srcCompat="@drawable/medications_img" />
 </androidx.constraintlayout.widget.ConstraintLayout>
