--- a/shifaa_scanner/src/main/res/layout/prescription_list_item.xml
+++ b/shifaa_scanner/src/main/res/layout/prescription_list_item.xml
@@ -1,98 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    app:cardCornerRadius="10dp"
-    app:cardElevation="5dp"
-    app:cardUseCompatPadding="true">
+    android:layout_height="wrap_content">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:padding="5dp">
+    <View
+        android:id="@+id/view_vertical_line"
+        android:layout_width="6dp"
+        android:layout_height="150dp"
+        android:layout_marginStart="8dp"
+        android:background="#AEB0B1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_medicine_name_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="Panadol Cold Flu"
-            android:textColor="@color/black"
-            android:textStyle="bold"
-            app:layout_constraintEnd_toStartOf="@+id/guideline8"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+    <View
+        android:id="@+id/view_circle"
+        android:layout_width="18dp"
+        android:layout_height="18dp"
+        android:background="@drawable/custom_filled_circle"
+        app:layout_constraintBottom_toBottomOf="@+id/view_vertical_line"
+        app:layout_constraintEnd_toEndOf="@+id/view_vertical_line"
+        app:layout_constraintStart_toStartOf="@+id/view_vertical_line"
+        app:layout_constraintTop_toTopOf="@+id/view_vertical_line" />
 
-        <TextView
-            android:id="@+id/tv_dose_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:text="Dose: 500 mg"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toStartOf="@+id/guideline8"
-            app:layout_constraintStart_toStartOf="@+id/tv_medicine_name_prescription"
-            app:layout_constraintTop_toBottomOf="@+id/tv_medicine_name_prescription" />
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cv_medication"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="15dp"
+        app:cardElevation="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/view_vertical_line"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <TextView
-            android:id="@+id/tv_frequency_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:text="Frequency: 2"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/guideline8"
-            app:layout_constraintTop_toTopOf="@+id/tv_dose_prescription" />
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/tv_schedule_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="8dp"
-            android:text="After Breakfast"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toStartOf="@+id/guideline8"
-            app:layout_constraintStart_toStartOf="@+id/tv_dose_prescription"
-            app:layout_constraintTop_toBottomOf="@+id/tv_dose_prescription" />
+            <View
+                android:id="@+id/view_vertical_line_cv"
+                android:layout_width="10dp"
+                android:layout_height="wrap_content"
+                android:background="@drawable/custom_filled_rounded_button"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_duration_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="16dp"
-            android:text="Duration: 3 Days"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/guideline8"
-            app:layout_constraintTop_toBottomOf="@+id/tv_frequency_prescription" />
+            <ImageView
+                android:id="@+id/iv_medication"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_marginStart="4dp"
+                android:src="@drawable/capsule"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/view_vertical_line_cv"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <androidx.constraintlayout.widget.Guideline
-            android:id="@+id/guideline8"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.5" />
+            <TextView
+                android:id="@+id/tv_medication_name_cv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:fontFamily="@font/poppins_bold"
+                android:text="Panadol"
+                android:textColor="@color/black"
+                android:textSize="18sp"
+                app:layout_constraintStart_toEndOf="@+id/iv_medication"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/tv_medicine_type_prescription"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:text="Type: Pills"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/guideline8"
-            app:layout_constraintTop_toTopOf="@+id/tv_medicine_name_prescription" />
+            <TextView
+                android:id="@+id/tv_medication_type_cv"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="Capsule"
+                app:layout_constraintEnd_toEndOf="@+id/tv_medication_name_cv"
+                app:layout_constraintStart_toEndOf="@+id/iv_medication"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medication_name_cv" />
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_dosage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="4dp"
+                android:text="500 mg"
+                app:layout_constraintBottom_toBottomOf="@+id/tv_medication_name_cv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/tv_medication_name_cv"
+                app:layout_constraintTop_toTopOf="@+id/tv_medication_name_cv" />
 
-</androidx.cardview.widget.CardView>
+            <TextView
+                android:id="@+id/tv_duration_list_item"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:fontFamily="@font/poppins_medium"
+                android:text="3 times a day for 5 days"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="@+id/iv_medication"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/tv_medication_type_cv"
+                app:layout_constraintTop_toBottomOf="@+id/tv_medication_type_cv" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+</androidx.constraintlayout.widget.ConstraintLayout>
